fix: profile button gap

--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -27,12 +27,14 @@
   }
 }
 
+@media (max-width: $screen-l) {
+  .footer {
+    gap: 16px;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   .header {
     background-color: $black;
-  }
-
-  .footer {
-    gap: 16px;
   }
 }
